sumo/tests/duarouter/errors/false_input_alts/options.duarouter
--net-file=input_net.net.xml --route-files=xxx.xml -o routes.rou.xml
